xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with requests involving biological research and
  applications that could pose safety risks. Eligible researchers can apply
  for Trusted Access.
  Trusted Access: https://www.openai.com/form/trusted-access-for-biology-
  research/
  Learn more: https://help.openai.com/en/articles/20001326
