xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
╭─ XEDOC ───────────────────────────── test ─╮
│  gpt-5                                     │
│  /tmp/project                         YOLO │
╰────────────────────────────────────────────╯
