xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────╮
│ x_ E47 Xedoc (v<version>)           │
│                                     │
│ model:     gpt-5   /model to change │
│ directory: /tmp/project             │
╰─────────────────────────────────────╯
