xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__single_line_command_compact_when_fits.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
• Ran echo ok
  └ (no output)
