xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__standalone_macos_update_available_history_cell_snapshot.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! <version> -> 9.9.9                                                                    │
│ Run sh -c 'curl -fsSL https://raw.githubusercontent.com/apohl79/codex/main/scripts/install/install.sh |    │
│ sh' to update.                                                                                             │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/apohl79/codex/releases/latest                                                           │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
