xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
expression: rendered
---
• Ran seq 1 10 1>&2 && false
  └ 1
    2
    … +6 lines (ctrl + t to view transcript)
    9
    10
