xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__streamed_agent_list_paragraph_preserves_item_indent_when_wrapped.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: "lines.join(\"\\n\")"
---
• 1. Correctness issue: server tool-search completions are
  rejected.
  
     In next_prompt_suggestion.rs, ToolSearchCall records its
     call id, but a paired output is ignored and suppresses
     suggestions.
