xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__token_usage_optimizer_stats_loading_snapshot.snap
---
source: tui-transcript/src/history_cell.rs
assertion_line: 1260
expression: rendered
---
• Reading token optimizer stats…
