xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__unknown_install_update_available_history_cell_snapshot.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────╮
│ ✨ Update available! <version> -> 9.9.9                        │
│ See https://github.com/apohl79/codex for installation options. │
│                                                                │
│ See full release notes:                                        │
│ https://github.com/apohl79/codex/releases/latest               │
╰────────────────────────────────────────────────────────────────╯
