xedoc-rs/tui-transcript/src/history_cell/snapshots/xedoc_tui_transcript__history_cell__tests__user_history_cell_numbers_multiple_remote_images.snap
---
source: tui-transcript/src/history_cell/tests.rs
expression: rendered
---

  [Image #1]
  [Image #2]

❯ describe both
